modules/tests/_kubernetes-policy/fixtures/edge-identity/oidc-target-wrong/resources.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: kanidm-oidc-tls
  namespace: identity
spec:
  targetRefs:
  - group: gateway.envoyproxy.io
    kind: Backend
    name: kanidm
  validation:
    hostname: idm.plus2.danielvicory.dev
    wellKnownCACertificates: System
